# cmakelang

Source/: CMakeLists.txt
Source/CLint/: clint.cxx
Tests/: CMakeLists.txt
Tests/CLintLib/: CMakeLists.txt  testXX.cxx
